--- a/views/createqr.ejs
+++ b/views/createqr.ejs
@@ -7,26 +7,26 @@
 
                     <div class="form-group">
                         <label for="identite">Identité</label>
-                        <input type="text" class="form-control" name="identite" id="identite" placeholder="Entrez votre prénom suivi de votre nom">
+                        <input type="text" class="form-control" name="identite" id="identite" placeholder="Entrez votre prénom suivi de votre nom" required>
                     </div>
 
                     <div class="form-group">
                         <label for="code">Code de sécurité :</label>
-                        <input type="password" class="form-control" name="code" id="code" placeholder="Entrez votre code à l'abri des regards...">
+                        <input type="password" class="form-control" name="code" id="code" placeholder="Entrez votre code à l'abri des regards..." required>
                     </div>
 
                     <div class="form-group">
                         <label for="salle">Salle</label>
-                        <input type="number" class="form-control" name="salle" id="salle" placeholder="Entrez la salle d'intervention">
+                        <input type="number" class="form-control" name="salle" id="salle" placeholder="Entrez la salle d'intervention" required>
                     </div>
                     <div class="form-group">
                         <label for="horaireEntree">Horaire d'entrée</label>
-                        <input type="datetime-local" class="form-control" name="horaireEntree" id="horaireEntree" placeholder="Entrez l'heure de sortie">
+                        <input type="datetime-local" class="form-control" name="horaireEntree" id="horaireEntree" placeholder="Entrez l'heure de sortie" required>
                     </div>
 
                     <div class="form-group">
                         <label for="horaireSortie">Horaire de sortie</label>
-                        <input type="datetime-local" class="form-control" name="horaireSortie" id="horaireSortie" placeholder="Entrez l'heure de sortie">
+                        <input type="datetime-local" class="form-control" name="horaireSortie" id="horaireSortie" placeholder="Entrez l'heure de sortie" required>
                     </div>
 
                     <div class="form-group">
