--- a/views/interventions.ejs
+++ b/views/interventions.ejs
@@ -33,10 +33,10 @@
                             <%= new Date(entry.heureDebutPrevu).getHours()+' h '+new Date(entry.heureDebutPrevu).getMinutes();%>
                         </td>
                         <td>
-                            <%= new Date(entry.heureDebutReel).getHours()+' h '+new Date(entry.heureDebutReel).getMinutes();%>
+                            <%= new Date(entry.heureEntreeReelle).getHours()+' h '+new Date(entry.heureEntreeReelle).getMinutes();%>
                         </td>
                         <td>
-                            <%= new Date(entry.heureFinReel).getHours()+' h '+new Date(entry.heureFinReel).getMinutes();%>
+                            <%= new Date(entry.heureSortieReelle).getHours()+' h '+new Date(entry.heureSortieReelle).getMinutes();%>
                         </td>
                     </tr>
                     <% }); %>
