--- a/views/createqr.ejs
+++ b/views/createqr.ejs
@@ -7,7 +7,14 @@
 
                     <div class="form-group">
                         <label for="identite">Identité</label>
-                        <input type="text" class="form-control" name="identite" id="identite" placeholder="Entrez votre prénom suivi de votre nom" required>
+                        <br>
+                        <select name="identite" id="identite">
+                            <option value="" disabled selected>Selectionner un intervenant</option>
+                            <option value="Yannick Midey">Yannick Midey</option>
+                            <option value="Lucas Pisano">Lucas Pisano</option>
+                            <option value="Alexandre Alleaume">Alexandre Alleaume</option>
+                            <option value="Bryan Guillot">Bryan Guillot</option>
+                        </select>
                     </div>
 
                     <div class="form-group">
