--- a/views/interventions.ejs
+++ b/views/interventions.ejs
@@ -11,9 +11,9 @@
     </div>
 
     <div class="container-fluid d-flex align-items-center flex-column">
-        <table class="table table-striped">
+        <table class="table table-striped" id="myTable">
             <thead>
-                <tr>
+                <tr class="header">
                     <th>Identité</th>
                     <th>Code</th>
                     <th>Salle</th>
@@ -26,7 +26,7 @@
 
             <tbody>
                 <% Interventions.forEach(function(entry) { %>
-                    <tr id="myTR">
+                    <tr>
                         <td>
                             <p>
                                 <%= entry.identite %>
@@ -67,4 +67,29 @@
                     <% }); %>
             </tbody>
         </table>
+
+        <script>
+            function recherche() {
+                // Declare variables
+                console.log("on est dedans");
+                var input, filter, table, tr, td, i, txtValue;
+                input = document.getElementById("myInput");
+                filter = input.value.toUpperCase();
+                table = document.getElementById("myTable");
+                tr = table.getElementsByTagName("tr");
+
+                // Loop through all table rows, and hide those who don't match the search query
+                for (i = 0; i < tr.length; i++) {
+                    td = tr[i].getElementsByTagName("td")[0];
+                    if (td) {
+                        txtValue = td.textContent || td.innerText;
+                        if (txtValue.toUpperCase().indexOf(filter) > -1) {
+                            tr[i].style.display = "";
+                        } else {
+                            tr[i].style.display = "none";
+                        }
+                    }
+                }
+            }
+        </script>
     </div>
